--- a/themes/cocoa/layouts/partials/head_includes.html
+++ b/themes/cocoa/layouts/partials/head_includes.html
@@ -17,7 +17,7 @@
 <!-- Fonts and icon CSS -->
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Ubuntu+Mono:400,400i,700,700i|Raleway:500">
-<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:500|Lato" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cormorant:500|Lato" rel="stylesheet">
 
 
 {{ if .Site.Params.cachebuster }}
