Remove example site

--- a/themes/cocoa/layouts/partials/footer_scripts.html
+++ b/themes/cocoa/layouts/partials/footer_scripts.html
@@ -11,3 +11,8 @@
     hljs.initHighlightingOnLoad();
   </script>
 {{ end }}
+
+<!-- bottom of page -->
+{{ if .GetParam "hasMath"}}
+  <script>renderMathInElement(document.body);</script>
+{{ end }}
