Add alternating attention viewer

--- a/themes/cocoa/layouts/partials/footer_scripts.html
+++ b/themes/cocoa/layouts/partials/footer_scripts.html
@@ -16,3 +16,7 @@
 {{ if .GetParam "hasMath"}}
   <script>renderMathInElement(document.body);</script>
 {{ end }}
+
+{{- range .Params.js }}
+  <script src="/js/{{ . }}.js"></script>
+{{- end }}
