--- a/themes/cocoa/layouts/partials/head_includes.html
+++ b/themes/cocoa/layouts/partials/head_includes.html
@@ -65,4 +65,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.6.0/contrib/auto-render.min.js"></script>
 {{ end }}
 
-
+{{ if .GetParam "hasd3"}}
+  <script src="https://d3js.org/d3.v4.min.js"></script>
+{{ end }}
