--- a/themes/cocoa/layouts/partials/head_includes.html
+++ b/themes/cocoa/layouts/partials/head_includes.html
@@ -67,4 +67,5 @@
 
 {{ if .GetParam "hasd3"}}
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 {{ end }}
