--- a/themes/cocoa/layouts/partials/header.html
+++ b/themes/cocoa/layouts/partials/header.html
@@ -23,6 +23,7 @@
                 <ul>
                     <a href="/blog/"><li>Blog</li></a>
                     <a href="/about/"><li>About</li></a>
+                    <a href="/resume.pdf"><li>Resume</li></a>
                 </ul>
             </nav>
         </div>
